debian: control: sort list of dependencies
Keep list of package dependencies sorted for better reading.

--- a/debian/control
+++ b/debian/control
@@ -6,34 +6,34 @@ Uploaders: Carlos Henrique Lima Melara <charlesmelara@riseup.net>,
            Maytham Alsudany <maytha8thedev@gmail.com>,
 Rules-Requires-Root: no
 Build-Depends:
- debhelper-compat (= 13),
  cmake,
- libvulkan-dev,
- libwayland-dev,
- libxrandr-dev,
- libxcb-randr0-dev,
- libdconf-dev,
- libdbus-1-dev,
- libmagickcore-dev,
- libxfconf-0-dev,
- libsqlite3-dev,
- librpm-dev,
- libegl-dev,
- libglx-dev,
- libosmesa6-dev,
- ocl-icd-opencl-dev,
- libnm-dev,
- libpulse-dev,
- libdrm-dev,
- libddcutil-dev,
- libchafa-dev,
- directx-headers-dev,
- pkgconf,
+ debhelper-compat (= 13),
  dh-cmake,
  dh-cmake-compat (= 1),
  dh-sequence-cmake,
  dh-sequence-ctest,
- ninja-build
+ directx-headers-dev,
+ libchafa-dev,
+ libdbus-1-dev,
+ libdconf-dev,
+ libddcutil-dev,
+ libdrm-dev,
+ libegl-dev,
+ libglx-dev,
+ libmagickcore-dev,
+ libnm-dev,
+ libosmesa6-dev,
+ libpulse-dev,
+ librpm-dev,
+ libsqlite3-dev,
+ libvulkan-dev,
+ libwayland-dev,
+ libxcb-randr0-dev,
+ libxfconf-0-dev,
+ libxrandr-dev,
+ ninja-build,
+ ocl-icd-opencl-dev,
+ pkgconf,
 Standards-Version: 4.7.0
 Homepage: https://github.com/fastfetch-cli/fastfetch
 Vcs-Browser: https://salsa.debian.org/debian/fastfetch
