--- a/debian/control
+++ b/debian/control
@@ -31,6 +31,7 @@ Build-Depends:
  libxcb-randr0-dev,
  libxfconf-0-dev,
  libxrandr-dev,
+ libyyjson-dev,
  ninja-build,
  ocl-icd-opencl-dev,
  pkgconf,
