--- a/debian/rules
+++ b/debian/rules
@@ -3,8 +3,8 @@
 %:
 	dh $@ --buildsystem=cmake+ninja
 
-override_dh_ctest_configure:
-	dh_ctest_configure -- -DSET_TWEAK=OFF \
+override_dh_auto_configure:
+	dh_auto_configure -- -DSET_TWEAK=OFF \
         -DBUILD_TESTS=ON \
         -DCMAKE_BUILD_TYPE=RelWithDebInfo \
         -DENABLE_PROPRIETARY_GPU_DRIVER_API=OFF \
