d/control: Fix synopsis

--- a/debian/control
+++ b/debian/control
@@ -41,7 +41,7 @@ Multi-Arch: foreign
 Depends:
  ${shlibs:Depends},
  ${misc:Depends},
-Description: The fastfetch package provides a faster alternative to neofetch.
+Description: neofetch-like tool for fetching system information
  Fastfetch is a neofetch-like tool for fetching system information and
  displaying them in a pretty way. It is written mainly in C, with
  performance and customizability in mind.
