d/salsa-ci.yml: Allow reprotest to fail

--- a/debian/salsa-ci.yml
+++ b/debian/salsa-ci.yml
@@ -8,3 +8,6 @@
 ---
 include:
   - https://salsa.debian.org/salsa-ci-team/pipeline/raw/master/recipes/debian.yml
+
+reprotest:
+  allow_failure: true
