d/gbp.conf: customize for toradex
Related-to: TCCP-845
Signed-off-by: Carlos Henrique Lima Melara <carlos.melara@toradex.com>

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,3 +1,5 @@
 [DEFAULT]
-debian-branch = debian/latest
+debian-branch = toradex/bookworm
+debian-tag = toradex/%(version)s
 upstream-branch = upstream/latest
+pristine-tar = False
